# homework

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
api/: models.py  serializers.py  type_defs.py  views.py
api/migrations/: 0001_initial.py  0002_alter_annotation_table_alter_image_table.py  0003_alter_annotation_id_alter_image_id.py  0004_rename_path_image_image.py  0005_alter_image_image.py  0006_alter_annotation_image.py  0007_alter_annotation_image.py
api/tests/: test_serializers.py  test_views.py
app/: asgi.py  settings.py  urls.py  wsgi.py
dentiai/: settings.py  urls.py
