[tool.poetry]
name = "dentiai-homework"
version = "0.1.0"
description = "Test task for Senior Software Engineer position in Denti.ai"
authors = ["Pavel Pavlov <ppavlov.swe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
mypy = "^1.7.1"
flake8 = "^6.1.0"
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
